--- a/src/App.css
+++ b/src/App.css
@@ -14,10 +14,12 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  background-color: #ffffff;
+  position: relative;
+  height: auto;
+  min-height: 100% !important;
+  display: block;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
