--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,86 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding:0;
+  margin:0;
+  height:100%;
+  min-height:100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.bottomPane {
+  margin: 15px;
+}
+
+
+.photoDiv {
+  height: 30%;
+}
+
+.textDiv {
+  height: 50%;
+}
+
+.photo {
+  height: 450px;
+  width: 100%;
+}
+
+.photoFooter{
+  height: 325px;
+  width: 100%;
+}
+
+.photoHeader{
+  height: 50px;
+  width: 100%;
+}
+
+.button {
+    webkit-font-smoothing: antialiased;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    text-decoration: none;
+    font-family: inherit;
+    font-weight: 700;
+    line-height: 1.5;
+    cursor: pointer;
+    border-radius: 2px;
+    border-width: 0px;
+    border-style: solid;
+    font-size: 16px;
+    background-color: rgb(0, 104, 239);
+    color: rgb(255, 255, 255);
+    width: 25%;
+    padding: 0px 4px;
+    height: 56px;
+}
+
+
+#nav {
+  width: 100%;
+  float: left;
+  margin: 0 0 3em 0;
+  padding: 0;
+  list-style: none;
+  background-color: rgb(255, 255, 255);
+  border-bottom: 1px solid #ccc; 
+  border-top: 1px solid #ccc; }
+
+#nav li a {
+      display: block;
+      padding: 8px 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #069;
+      border-right: 1px solid #ccc; 
+}     
